updates from template

--- a/book.toml
+++ b/book.toml
@@ -1,9 +1,9 @@
 [book]
-authors = []
+authors = ["Ope Bukola", "Rob Cobb"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Course Name"
+title = "Industry Experience"
 
 [build]
 build-dir = "output"
